# CCD-Wrapper

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  Rational_0.csv
.github/workflows/: benchmark.yml  continuous.yml  nightly.yml
cmake/: CCDDependencies.cmake  CCDDownloadExternal.cmake  CCDWrapperDependencies.cmake  CCDWrapperDownloadExternal.cmake  tbb.cmake
cmake/ccd_wrapper/: ccd_wrapper_warnings.cmake
cmake/recipes/: cli11.cmake  fixed_root_parity.cmake  floating_point_root_finder.cmake  interval_based_ccd.cmake  minimum_separation_root_finder.cmake  rational_root_parity.cmake  root_parity_and_bernstein_sign_classification.cmake  sample_queries.cmake  tight_ccd.cmake  tight_inclusion.cmake
src/: Rational.hpp  benchmark.cpp  benchmark_new.cpp  ccd.cpp  ccd.hpp  check_ground_truth.cpp
src/methods/: ccd_method.cpp  ccd_method.hpp  floating_point_root_finder_ccd.cpp  floating_point_root_finder_ccd.hpp  msccd_method.hpp  rational_root_parity_ccd.cpp  rational_root_parity_ccd.hpp  root_parity_ccd.cpp  root_parity_ccd.hpp
src/min_separation_ccd/: min_separation_ccd.cpp  min_separation_ccd.hpp
src/min_separation_root_finder/: min_separation_root_finder.cpp
src/tools/: benchmark_min_separation.cpp  generate_ground_truth.cpp  round_queries.cpp  shift_queries.cpp  time_min_distances.cpp
src/utils/: io.cpp  io.h  rational.hpp  read_rational_csv.cpp  read_rational_csv.hpp  rpoly.h  timer.hpp
tests/: CMakeLists.txt  dump_queries.hpp  test_ccd.cpp
tools/: benchmark_all_methods.sh  benchmark_min_separation_methods.sh  benchmark_zero_separation.sh  generate_all_ground_truths.sh  generate_benchmark_table.py  generate_min_separation_benchmark_table.py  pack_all_queries.sh  pack_collision_queries.py  plot_min_distance_timings.py  plot_rounding_error.py  print_msccd_timings.py  shift_all_queries.sh  time_min_distances.sh  unpack_all_collision_queries.sh  unpack_collision_queries.py
visualization/: readme.md  readme.txt  visualCCD.py
